Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Taourist Blog - GitHub.io</h1>
-        <p>Taourist Blog</p>
+        <p>人生如逆旅 我亦是行人</p>
       </header>
 
       <div id="banner">
