Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,37 +32,35 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>Recently I met a problem when using Shiro framework. Apache Shiro is known as a  powerful and easy-to-use Java security framework that performs authentication, authorization, cryptography, and session management. Since it relieved us of security issues, I deployed it for user management in our project.
+I spent some time to make it work, including user authentication, realm authorization and so on. After all is done, a problem occurred. It happened when logged in user is logged out due to session time out, The user is not redirected to the login page correctly when session is out, instead the whole page flashes. I must refresh the page manually in order to make the redirection work. It confused me since I had never set the configuration about the session out mechanism. The only thing I did is setting the session-timeout parameter in web.xml.
+Then I had to search how this engine works. Soon I found the redirection is implemented by the filter of Shiro, Shiro will create some default filters instances when running web-app. And the configuration code of filter lies in Spring application.xml:</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<pre><code> &lt;bean id="shiroFilter" class="org.apache.shiro.spring.web.ShiroFilterFactoryBean"&gt;
+    &lt;property name="filterChainDefinitions"&gt;
+        &lt;value&gt;
+            /js/** = anon
+            /css/** = anon
+            /login = anon
+            /** = authc
+        &lt;/value&gt;
+    &lt;/property&gt;
+&lt;/bean&gt;
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Here, authc means FormAuthenticationFilter class in Shiro. Thus the log out operation is implemented in onAccessDenied method, then I wonder why it does not work for my situation. I searched Google again, and realized that is is due to AJAX request! Because all the requests in our project is AJAX request, the redirection thus can not be implemented by the server side. An alternative solution is add a sign in http response header, then the front page can receive the sign, and perform the redirection. Since the solution is clear, I created a new class named xxFilter, inherited from FormAuthenticationFilter, overrode onAccessDenied method, and added an operation for AJAX request. The code fragment is as follows.</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code> if (WebUtils.isAjax((HttpServletRequest) request)) {
+    logger.debug("This is ajax request, no redirection, but add header.");
+    WebUtils.toHttp(response).addHeader("sessionStatus", "timeout");
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+} else {
+    logger.debug("Just perform the normal redirection.");
+    saveRequestAndRedirectToLogin(request, response);
+}
+</code></pre>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Then I tried to replace the authc filter with this new filter in application.xml, and it worked!</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
